--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
+    "country-to-currency": "^2.0.2",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
