--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "country-to-currency": "^2.0.2",
+    "lucide-react": "^0.544.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
