--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "recharts": "^3.2.1",
     "zod": "^4.1.3"
   },
   "devDependencies": {
