--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "country-to-currency": "^2.0.2",
     "lucide-react": "^0.544.0",
-    "next": "15.4.6",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-datepicker": "^8.7.0",
